// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataset/dataset.job.run/JobAccordion renders a failed run 1`] = `
<span
  eventKey="59c16458c650bd001111f010"
>
  <div
    className="job panel panel-default pending"
  >
    <div
      className="panel-heading"
    >
      <div
        className="panel-title "
      >
        <div
          className="failed"
        >
          <label>
            Status
          </label>
          <span
            className="badge"
          >
            FAILED
          </span>
          <br />
          <span
            className="meta"
          >
            <label>
              Run on 
            </label>
            <strong>
              09/19/2017
            </strong>
             at 
            <strong>
              11:39 AM
            </strong>
            <span>
              <br />
              <label>
                By 
              </label>
              <strong>
                nell@squishymedia.com
              </strong>
            </span>
          </span>
          <br />
          <span
            className="meta"
          >
            <label>
              Job ID
            </label>
            <strong>
              a2e4e221-a671-415a-bd0f-b7fdd44cea14
            </strong>
          </span>
          <div>
            <h5
              className="text-danger"
            >
              We were unable to complete this analysis.
               
              <span>
                Support information for this app is available below. Please contact the site 
                <a
                  href="mailto:openfmri@gmail.com?subject=Analysis%20Failure"
                  target="_blank"
                >
                  administrator
                </a>
                 if this analysis continues to fail.
              </span>
            </h5>
            <WarnButton
              action={[Function]}
              cancel={
                <i
                  className="fa fa-times"
                />
              }
              confirm={
                <i
                  className="fa fa-check"
                />
              }
              icon="fa fa-repeat"
              message="re-run"
              tooltip={null}
              warn={false}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel-body"
    >
      <span
        className="inner"
      >
        <Accordion
          accordion={true}
          className="results"
        >
          <Panel
            bsClass="panel"
            bsStyle="default"
            className="fade-in"
            defaultExpanded={false}
            eventKey="59c16458c650bd001111f010"
            header="Support"
          >
            <div
              className="app-support"
            >
              <div
                className="markdown"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
              />
            </div>
          </Panel>
        </Accordion>
        <Accordion
          accordion={true}
          className="results"
        >
          <Panel
            bsClass="panel"
            bsStyle="default"
            className="fade-in"
            defaultExpanded={false}
            eventKey="59c16458c650bd001111f010"
            header="Parameters"
          >
            <ul>
              <li>
                <span
                  className="key"
                >
                  participant_label
                </span>
                : 
                <span
                  className="value"
                >
                  07
                </span>
              </li>
            </ul>
          </Panel>
        </Accordion>
        <Accordion
          accordion={true}
          className="results"
        >
          <Panel
            bsClass="panel"
            bsStyle="default"
            className="fade-in"
            defaultExpanded={false}
            eventKey="59c16458c650bd001111f010"
            header="Jobs Status"
          >
            <ul>
              <div
                className=" job-status col-xs-12"
              >
                <div
                  className="col-xs-8"
                >
                  JobId
                </div>
                <div
                  className="col-xs-4"
                >
                  Status
                </div>
              </div>
              <div
                className="job-status col-xs-12"
              >
                <div
                  className="col-xs-8"
                >
                  49c03ed3-281e-40d3-b027-3102dcb5153c
                </div>
                <div
                  className="col-xs-4"
                >
                  FAILED
                </div>
              </div>
              <div
                className="job-status col-xs-12"
              >
                <div
                  className="col-xs-8"
                >
                  e276c571-83f7-439f-a34c-09840bb2a9cd
                </div>
                <div
                  className="col-xs-4"
                >
                  FAILED
                </div>
              </div>
            </ul>
          </Panel>
        </Accordion>
      </span>
    </div>
  </div>
</span>
`;

exports[`dataset/dataset.job.run/JobAccordion renders a successful run 1`] = `
<span
  eventKey="59c1632cc650bd001111f00d"
>
  <Panel
    bsClass="panel"
    bsStyle="default"
    className="job border-flash"
    defaultExpanded={false}
    header={
      <div
        className="succeeded"
      >
        <label>
          Status
        </label>
        <span
          className="badge"
        >
          SUCCEEDED
        </span>
        <br />
        <span
          className="meta"
        >
          <label>
            Run on 
          </label>
          <strong>
            09/19/2017
          </strong>
           at 
          <strong>
            11:34 AM
          </strong>
          <span>
            <br />
            <label>
              By 
            </label>
            <strong>
              nell@squishymedia.com
            </strong>
          </span>
        </span>
        <br />
        <span
          className="meta"
        >
          <label>
            Job ID
          </label>
          <strong>
            dcedf0c3-4438-466d-9f85-61c75275b355
          </strong>
        </span>
      </div>
    }
  >
    <span
      className="inner"
    >
      <Accordion
        accordion={true}
        className="results"
      >
        <Panel
          bsClass="panel"
          bsStyle="default"
          className="fade-in"
          defaultExpanded={false}
          eventKey="59c1632cc650bd001111f00d"
          header="Parameters"
        >
          <ul>
            <li>
              <span
                className="key"
              >
                participant_label
              </span>
              : 
              <span
                className="value"
              >
                13
              </span>
            </li>
          </ul>
        </Panel>
      </Accordion>
      <Accordion
        accordion={true}
        className="results"
      >
        <Panel
          bsClass="panel"
          bsStyle="default"
          className="fade-in"
          defaultExpanded={false}
          eventKey="59c1632cc650bd001111f00d"
          header="results"
        >
          <div
            className="app-acknowledgements"
          >
            <label>
              Acknowledgements
            </label>
            <div
              className="markdown"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "",
                }
              }
            />
          </div>
          <hr />
          <span
            className="download-all"
          >
            <WarnButton
              cancel={
                <i
                  className="fa fa-times"
                />
              }
              confirm={
                <i
                  className="fa fa-check"
                />
              }
              icon="fa-download"
              message=" DOWNLOAD All"
              prepDownload={[Function]}
              tooltip={null}
              warn={true}
            />
          </span>
          <div
            className="file-structure fade-in panel-group"
          >
            <div
              className="panel panel-default"
            >
              <div
                aria-expanded="false"
                className="panel-collapse"
              >
                <div
                  className="panel-body"
                >
                  <FileTree
                    displayFile={[Function]}
                    editable={false}
                    getFileDownloadTicket={[Function]}
                    toggleFolder={[Function]}
                    tree={
                      Array [
                        Object {
                          "dirPath": "avg_brain_size.txt",
                          "name": "avg_brain_size.txt",
                          "path": "openneuro.outputs/cf02b5bf17df80d056effadccffd65bd/dcedf0c3-4438-466d-9f85-61c75275b355/avg_brain_size.txt",
                          "type": "file",
                        },
                        Object {
                          "dirPath": "sub-13_brain.nii.gz",
                          "name": "sub-13_brain.nii.gz",
                          "path": "openneuro.outputs/cf02b5bf17df80d056effadccffd65bd/dcedf0c3-4438-466d-9f85-61c75275b355/sub-13_brain.nii.gz",
                          "type": "file",
                        },
                      ]
                    }
                    treeId="59c1632cc650bd001111f00d"
                  />
                </div>
              </div>
            </div>
          </div>
        </Panel>
      </Accordion>
      <Accordion
        accordion={true}
        className="results"
      >
        <Panel
          bsClass="panel"
          bsStyle="default"
          className="fade-in"
          defaultExpanded={false}
          eventKey="59c1632cc650bd001111f00d"
          header="Logs"
        >
          <span
            className="download-all"
          >
            <WarnButton
              cancel={
                <i
                  className="fa fa-times"
                />
              }
              confirm={
                <i
                  className="fa fa-check"
                />
              }
              icon="fa-download"
              message=" DOWNLOAD All LOGS"
              prepDownload={[Function]}
              tooltip={null}
              warn={true}
            />
          </span>
          <div
            className="file-structure fade-in panel-group"
          >
            <div
              className="panel panel-default"
            >
              <div
                aria-expanded="false"
                className="panel-collapse"
              >
                <span>
                  PARTICIPANT
                  <span
                    className="job-log"
                  >
                    <WarnButton
                      action={[Function]}
                      cancel={
                        <i
                          className="fa fa-times"
                        />
                      }
                      confirm={
                        <i
                          className="fa fa-check"
                        />
                      }
                      icon="fa-eye"
                      message="--participant_label 13"
                      tooltip={null}
                      warn={false}
                    />
                    <span
                      className="exit-code "
                    >
                      <span
                        className="label label-success"
                      >
                        SUCCESS
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  GROUP
                  <span
                    className="job-log"
                  >
                    <WarnButton
                      action={[Function]}
                      cancel={
                        <i
                          className="fa fa-times"
                        />
                      }
                      confirm={
                        <i
                          className="fa fa-check"
                        />
                      }
                      icon="fa-eye"
                      message="--participant_label 13"
                      tooltip={null}
                      warn={false}
                    />
                    <span
                      className="exit-code "
                    >
                      <span
                        className="label label-success"
                      >
                        SUCCESS
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </Panel>
      </Accordion>
    </span>
  </Panel>
</span>
`;
